# mysqlapi

src/: mysqlclient.cpp  mysqlclient.h  sqlstruct.cpp  sqlstruct.h  util.cpp  util.h
test/: CMakeLists.txt  build.sh  test_autoconnect.cpp  test_normal.cpp  test_stmt.cpp
test/model/: build.sh  tbl_test_model.cpp  tbl_test_model.h  test_model  test_model.cpp
tool/: CMakeLists.txt  build.sh  main.cpp  struct.h  utils.h
